--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ h1::first-letter{
 #contactme fieldset{
     border-style: double;
     width: 545px;
-    height: 200px;
+    height: 100px;
+    overflow: auto;
         
 }
 
