Created a img folder

--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,9 @@ h1::first-letter{
         
 }
 
-.resume-background-img{
-    width: 700px;
-    height:
+#resume-backgroud-img{
+    height: 100px;
+    width: 600px;
 }
+
 
