Change only the direction of the writing (direction)

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;  
-    writing-mode:vertical-rl; 
+    writing-mode:horizontal-tb; 
+    direction:rtl;
 }
 
 main {
