--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 * {
     box-sizing: border-box;  
-    writing-mode:horizontal-tb; 
+    writing-mode: vertical-rl; 
     direction:rtl;
+    text-orientation: upright;
 }
 
 main {
