Reset CSS Style

--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,1 @@
-* {
-    box-sizing: border-box;  
-    writing-mode: horizontal-tb; 
-    direction:ltr;
-    text-orientation: upright;
-}
-
-main {
-    max-width: 700px;
-    padding: 0 2rem;
-    margin-left: 180px;
-    border-left: solid 2px black;
-    border-right: solid 2px black;
-}
-
-[class~="resume-unordered-lists"]{
-    font-style: italic;
-}
-
-#education {
-    font-family: Georgia;
-}
-
-ul, ol {
-    font-weight: bold;
-}
-
-section p {
-    font-size: large;
-}
-
-nav{
-    position:sticky;
-    inset-inline-start: 0px;
-    text-align: center;
-
-}
-
-nav ul li {
-    list-style: circle;
-    display: inline;
-    line-height: 2rem;
-}
-
-a:visited{
-    color: blueviolet;
-}
-
-input:focus, select:focus{
-    outline: 2px solid black;
-}
-
-section:not(#contactme){
-    color: darkblue;
-}
-
-h1::first-letter{
-    color: tomato;
-}
-
-:is(ul.resume-list, ol) li {
-    outline: solid red 1px;
-}
-
-#contactme fieldset{
-    border-style: double;
-    width: 545px;
-    height: 100px;
-    overflow: auto;
-        
-}
-
-#resume-backgroud-img{
-    max-height: 20%;
-    max-width: 30%;
-    float: left;
-    margin-right: 2rem;
-    
-}
-
-.personal-info{
-    display: grid;
-    grid-template-columns: max-content auto;
-}
-.personal-info dt{
-    grid-column-start: 1;
-}
-.personal-info dd{
-    grid-column-start: 2;
-    margin-inline-start: 5px;
-}
-
-
+* 
